# hs_3d_reconstructor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists_legacy.txt  REQUIREMENT.md
ci_script/: hs_3d_reconstructor_cmake_generate.sh
resource/: 3d_reconstructor.qrc
source/: CMakeLists.txt  blocks_pane.cpp  blocks_tree_widget.cpp  blocks_tree_widget.hpp  main_window.cpp  manager_pane.cpp  map_projection_config_widget.hpp  opengl_window.cpp  opengl_window.hpp  photo_display_window.hpp  photos_tree_widget.cpp  scene_window.hpp
source/database/: CMakeLists.txt  block_resource.cpp  block_resource.hpp  condition.cpp  condition.hpp  database.cpp  database.hpp  database_mediator.cpp  database_mediator.hpp  demo_resource.cpp  demo_resource.hpp  feature_match_resource.cpp  feature_match_resource.hpp  field.cpp  field.hpp  gcp_photo_measure_relation_resource.cpp  gcp_photo_measure_relation_resource.hpp  ground_control_point_resource.cpp  ground_control_point_resource.hpp  photo_block_relation_resource.cpp  photo_block_relation_resource.hpp  photo_measure_resource.cpp  photo_measure_resource.hpp  photo_orientation_resource.cpp  photo_orientation_resource.hpp  photo_resource.cpp  photo_resource.hpp  photogroup_resource.cpp  photogroup_resource.hpp  point_cloud_resource.cpp  point_cloud_resource.hpp  resource_utility.hpp  surface_model_resource.cpp  surface_model_resource.hpp  texture_resource.cpp  texture_resource.hpp
source/gui/: CMakeLists.txt  block_info_widget.cpp  block_info_widget.hpp  block_photos_select_dialog.cpp  block_photos_select_dialog.hpp  block_photos_select_widget.cpp  block_photos_select_widget.hpp  blocks_pane.cpp  blocks_pane.hpp  blocks_tree_widget.cpp  blocks_tree_widget.hpp  default_longitude_latitude_convertor.cpp  default_longitude_latitude_convertor.hpp  feature_match_configure_widget.cpp  feature_match_configure_widget.hpp  feature_match_export_widget.cpp  feature_match_export_widget.hpp  feature_match_info_widget.cpp  feature_match_info_widget.hpp  gcp_constrained_optimization_config_dialog.cpp  gcp_constrained_optimization_config_dialog.hpp  gcp_constrained_optimization_config_widget.cpp  gcp_constrained_optimization_config_widget.hpp  gcp_mark_widget.hpp  gcps_pane.cpp  gcps_pane.hpp  gcps_table_widget.cpp  gcps_table_widget.hpp  image_container_widget.cpp  image_container_widget.hpp  image_measure_opengl_window.cpp  image_measure_opengl_window.hpp  image_opengl_widget.cpp  image_opengl_widget.hpp  image_opengl_window.cpp  image_opengl_window.hpp  main.cpp  main_window.cpp  main_window.hpp  manager_pane.cpp  (+71 more)
source/gui/ui/: main_window.ui
source/workflow/: CMakeLists.txt
source/workflow/common/: default_longitude_latitude_convertor.cpp  default_longitude_latitude_convertor.hpp  workflow_step.cpp  workflow_step.hpp
source/workflow/feature_match/: feature_match_config.cpp  feature_match_config.hpp  feature_match_step.cpp  feature_match_step.hpp  opencv_feature_match.cpp  opencv_feature_match.hpp  openmvg_feature_match.cpp  openmvg_feature_match.hpp
source/workflow/mesh_surface/: delaunay_surface_model.cpp  delaunay_surface_model.hpp  poisson_surface_model.cpp  poisson_surface_model.hpp  surface_model_config.cpp  surface_model_config.hpp
source/workflow/photo_orientation/: incremental_photo_orientation.cpp  incremental_photo_orientation.hpp
source/workflow/point_cloud/: pmvs_point_cloud.cpp  pmvs_point_cloud.hpp  pmvs_point_cloud_generate_xml.cpp  pmvs_point_cloud_generate_xml.hpp
source/workflow/texture/: rough_texture.cpp  rough_texture.hpp
test_data/camera/: muliangpo_multirotor_test_2_extrinsic.orn  muliangpo_multirotor_test_2_extrinsic.xml
test_data/gcp/: miltiroter_test_2_marker_2.xml
ts/: zh_cn.ts
unit_test/: CMakeLists.txt  action_tester.cpp  test_blocks_tree_widget.cpp  test_manager_pane.cpp  test_photos_tree_widget.cpp  test_utility.cpp
unit_test/database/: CMakeLists.txt  main.cpp  resource_tester.hpp  test_block_resource.cpp  test_condition.cpp  test_demo_resource.cpp  test_feature_match_resource.cpp  test_gcp_photo_measure_relation_resource.cpp  test_ground_control_point_resource.cpp  test_photo_block_relation_resource.cpp  test_photo_measure_resource.cpp  test_photo_orientation_resource.cpp  test_photo_resource.cpp  test_photogroup_resource.cpp  test_point_cloud_resource.cpp  test_surface_model_resource.cpp  test_texture_resource.cpp
unit_test/gui/: action_tester.hpp  test_block_info_widget.cpp  test_blocks_tree_widget.cpp  test_feature_match_info_widget.cpp  test_image_container_widget.cpp  test_image_opengl_widget.cpp  test_image_opengl_window.cpp  test_main.cpp  test_manager_pane.cpp  test_opengl_widget.cpp  test_opengl_window.cpp  test_photo_files_select_widget.cpp  test_photo_orientation_info_widget.cpp  test_photogroup_info_pos_wrap_widget.cpp  test_photogroup_info_widget.cpp  test_photogroup_pos_configure_widget.cpp  test_photos_import_configure_dialog.cpp  test_photos_tree_widget.cpp  test_property_field_asignment_dialog.cpp  test_tiepoint_measure_widget.cpp  test_utility.hpp
unit_test/workflow/: test_pmvs_point_cloud.cpp
